#  flac - Command-line FLAC encoder/decoder
#  Copyright (C) 2000,2001  Josh Coalson
#
#  This program is free software; you can redistribute it and/or
#  modify it under the terms of the GNU General Public License
#  as published by the Free Software Foundation; either version 2
#  of the License, or (at your option) any later version.
#
#  This program is distributed in the hope that it will be useful,
#  but WITHOUT ANY WARRANTY; without even the implied warranty of
#  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
#  GNU General Public License for more details.
#
#  You should have received a copy of the GNU General Public License
#  along with this program; if not, write to the Free Software
#  Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.

includedir = ${prefix}/include/FLAC

include_HEADERS = \
	all.h \
	assert.h \
	file_decoder.h \
	format.h \
	ordinals.h \
	seek_table.h \
	seekable_stream_decoder.h \
	stream_decoder.h \
	stream_encoder.h \
	utility.h
